--- a/doan/src/main/resources/templates/admin.html
+++ b/doan/src/main/resources/templates/admin.html
@@ -25,74 +25,20 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12">
             <div class="card">
-                <div class="card-header"><h4>Danh mục</h4></div>
                 <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-hover">
-                            <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Tên danh mục</th>
-                                <th>Số lượng</th>
-                                <th>Trạng thái</th>
-                                <th>Thao tác</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="c : ${categories}">
-                                <td th:text="${c.id}"></td>
-                                <td th:text="${c.name}"></td>
-                                <td th:text="${c.quantity}"></td>
-                                <td>
-                                    <span th:text="${c.status}"
-                                          th:classappend="${c.status=='Hoạt động'} ? 'badge badge-success' : 'badge badge-secondary'"></span>
-                                </td>
-                                <td class="actions">
-                                    <button class="btn btn-sm btn-primary" type="button"><i class="fa fa-pencil"></i> Sửa</button>
-                                    <button class="btn btn-sm btn-danger" type="button"><i class="fa fa-trash"></i> Xóa</button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-lg-6">
-            <div class="card">
-                <div class="card-header"><h4>Sản phẩm</h4></div>
-                <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table table-bordered table-striped table-hover">
-                            <thead>
-                            <tr>
-                                <th>ID</th>
-                                <th>Tên sản phẩm</th>
-                                <th>Số lượng</th>
-                                <th>Trạng thái</th>
-                                <th>Thao tác</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="p : ${products}">
-                                <td th:text="${p.id}"></td>
-                                <td th:text="${p.name}"></td>
-                                <td th:text="${p.quantity}"></td>
-                                <td>
-                                    <span th:text="${p.status}"
-                                          th:classappend="${p.status=='Còn hàng'} ? 'badge badge-success' : 'badge badge-warning'"></span>
-                                </td>
-                                <td class="actions">
-                                    <button class="btn btn-sm btn-primary" type="button"><i class="fa fa-pencil"></i> Sửa</button>
-                                    <button class="btn btn-sm btn-danger" type="button"><i class="fa fa-trash"></i> Xóa</button>
-                                </td>
-                            </tr>
-                            </tbody>
-                        </table>
-                    </div>
+                    <h4 class="mb-3">Chọn chức năng</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span>Category</span>
+                            <a th:href="@{/admin/category}" class="btn btn-primary btn-sm">Đi tới danh mục</a>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center">
+                            <span>Product</span>
+                            <a th:href="@{/admin/product}" class="btn btn-primary btn-sm">Đi tới sản phẩm</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
