--- a/doan/src/main/resources/templates/admin/layout.html
+++ b/doan/src/main/resources/templates/admin/layout.html
@@ -76,7 +76,7 @@
     </div>
 </nav>
 <div class="content-wrapper">
-    <div th:insert="${content}">
+    <div th:replace="${content}">
 
     </div>
     <footer class="sticky-footer">
