--- a/doan/src/main/resources/templates/admin/layout.html
+++ b/doan/src/main/resources/templates/admin/layout.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head th:fragment="adminHead">
     <meta charset="utf-8">
